--- a/5.13-android/Dockerfile
+++ b/5.13-android/Dockerfile
@@ -35,6 +35,7 @@ ENV PATH ${QT_ANDROID}/bin:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${AND
 #  * cmake, just an extra tool.
 RUN dpkg --add-architecture i386 && apt update && apt full-upgrade -y && apt install -y --no-install-recommends \
     unzip \
+    cmake \
     git \
     openssh-client \
     ca-certificates \
