--- a/5.13-android/Dockerfile
+++ b/5.13-android/Dockerfile
@@ -35,6 +35,7 @@ ENV PATH ${QT_ANDROID}/bin:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${AND
 #  * libc6:i386, libncurses5:i386, libstdc++6:i386, libz1:i386 - dependencides of android sdk binaries
 #  * cmake, just an extra tool.
 RUN dpkg --add-architecture i386 && apt update && apt full-upgrade -y && apt install -y --no-install-recommends \
+    wget \
     unzip \
     git \
     openssh-client \
